rxvt-unicode changelog <= google-friendly title

9.07 Wed Dec 30 07:07:18 CET 2009
	- port to glibc-2.10 changes (strchr etc. returning const char *
          in C++), based on patches by Milos Jakubicek and Oliver Mader.
        - the binary search algorithm to find precomposed characters
          was faulty, skipping some possible combinations (found by
          Mikachu).
        - new -letterspace option, patch by Mark H. Wilkinson.
	- enable --mlock option for urxvt with frills on
          systems supporting it (patch by Russell Harmon).
	- urxvt did not compile without frills enabled
          (analysed by Matthew Rosewarne).
        - correctly reset the mbstate after an illegal
          input sequence when handling terminal output (Emanuele Giaquinta).
        - avoid redrawing wide characters with combining enabled on every
          refresh (reported by Mikachu).
        - fix a typo preventing the ISO-646.1991 character set from being
          recognized (http://achurch.org/patch-pile/).
        - better warning for x11 font encoding detection failures, also,
          try to deduce encoding from both font properties and name
          (adapted from http://achurch.org/patch-pile/).
        - resizing the window with the scrollbar disabled via the escapes
          sequence could make the window bigger again (Mikachu).
        - make sure the alignment for fd passing control messages
          is correct and work around some NetBSD issues (Taylor R Campbell).
        - update to libptytty 1.3.
        - replace maxosc-pastebin by a nicer version by Reza Jelveh, and move
          the old version to macosx-pastebin-native.
        - document the -uc option (Emanuele Giaquinta).
        - assertions in libev are now enabled depending on frills.
        - update AnyEvent implementation to version 5.23 API.
        - work around arrogant bsd idiocies again: netbsd spills the default
          namespace with lots of symbols "for gnu/gcc compatibility" even