@@ -112,6 +112,7 @@
   def (perl_lib)
 #endif
 #if ISO_14755
+  def (iso14755)
   def (iso14755_52)
 #endif
 #ifdef HAVE_AFTERIMAGE
