@@ -1,5 +1,7 @@
 rxvt-unicode changelog <= google-friendly title
 
+	- new iso14755 option to disable ISO 14755 at runtime (Emanuele Giaquinta).
+
 9.07 Wed Dec 30 07:07:18 CET 2009
 	- port to glibc-2.10 changes (strchr etc. returning const char *
           in C++), based on patches by Milos Jakubicek and Oliver Mader.
